# structured-data-classifier

./: .gitignore  README.md  pyproject.toml
new_version/: risk_cancer.ipynb
old_version/: risk_cancer_colab_version.ipynb
