[tool.poetry]
name = "structured-data-classifier"
version = "0.1.0"
description = ""
authors = ["amandafbri <amanda.brinhosa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
mlflow = "^1.22.0"
autokeras = "^1.0.16"
tensorflow = "2.3.4"
numpy = "1.18.5"
pandas = "1.3"
jupyterlab = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
